fixed overflow problem

--- a/style.css
+++ b/style.css
@@ -3,12 +3,8 @@
     margin: 0;
 }
 body{
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     background: linear-gradient(to right, #6a11cb, #2575fc);
-   
-    
+    overflow-x: hidden;
 }
 .bmi-cal{
 background-color: white;
